// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnippetEditor Desktop mode and should switch to mobile 1`] = `
.c29 {
  width: 16px;
  height: 16px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c22 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c23:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c24::-moz-focus-inner {
  border-width: 0;
}

.c24:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c25:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c26 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c26 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c6 {
  overflow: auto;
  width: 640px;
  padding: 0 20px;
  max-width: 100%;
  box-sizing: border-box;
}

.c7 {
  width: 600px;
}

.c5 {
  background-color: #fff;
  font-family: arial,sans-serif;
  box-sizing: border-box;
}

.c17 {
  cursor: pointer;
  position: relative;
}

.c18 {
  color: #1a0dab;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 20px;
  line-height: 1.3;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c19 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c15 {
  display: inline-block;
  max-width: 240px;
  overflow: hidden;
  vertical-align: top;
  text-overflow: ellipsis;
  margin-left: 4px;
}

.c20 {
  white-space: nowrap;
}

.c8 {
  display: inline-block;
  cursor: pointer;
  position: relative;
  width: calc( 100% + 7px );
  white-space: nowrap;
  font-size: 14px;
  line-height: 16px;
  vertical-align: top;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-overflow: ellipsis;
  max-width: 100%;
  margin-bottom: 12px;
  padding-top: 1px;
  line-height: 20px;
  vertical-align: bottom;
}

.c12 {
  font-size: 14px;
  line-height: 1.3;
  color: #4d5156;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c14 {
  color: #4d5156;
}

.c10 {
  width: 28px;
  height: 28px;
  margin-right: 12px;
  border-radius: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #f1f3f4;
  min-width: 28px;
}

.c21 {
  color: #4d5156;
  cursor: pointer;
  position: relative;
  max-width: 600px;
  padding-top: 1px;
  font-size: 14px;
  line-height: 1.58;
}

.c13 {
  line-height: 18x;
  font-size: 14px;
  color: black;
  max-width: 100%;
  overflow: hidden;
}

.c16 {
  display: inline-block;
  height: 18px;
  line-height: 18px;
  padding-left: 8px;
  vertical-align: bottom;
}

.c11 {
  width: 18px;
  height: 18px;
  margin: 0 5px;
  vertical-align: middle;
}

.c1 {
  border: 0;
  padding: 0;
  margin: 0 0 16px;
}

.c2 {
  margin: 8px 0;
  padding: 0;
  color: #555;
  font-size: 14px;
  font-weight: 600;
}

.c4 {
  margin-right: 16px;
  color: inherit;
  font-size: 14px;
  line-height: 1.71428571;
  cursor: pointer;
  display: inline-block;
}

.c3.c3 {
  margin: 0 8px 0 0;
  cursor: pointer;
}

.c0 {
  margin: 0 0 16px;
  padding: 0;
  color: #555;
  font-size: 12px;
  font-weight: 300;
}

.c27 {
  height: 33px;
  border: 1px solid #dbdbdb;
  box-shadow: none;
  font-family: Arial,Roboto-Regular,HelveticaNeue,sans-serif;
}

.c28 {
  margin: 10px 0 0 4px;
  fill: #555;
  padding-left: 8px;
}

.c28 svg {
  margin-right: 7px;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c26::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div>
  <div>
    <legend
      class="c0"
    >
      Determine how your post should look in the search results.
    </legend>
    <fieldset
      class="c1"
    >
      <legend
        class="c2"
      >
        Preview as:
      </legend>
      <input
        class="c3"
        id="yoast-google-preview-mode-mobile"
        name="screen"
        type="radio"
        value="mobile"
      />
      <label
        class="c4"
        for="yoast-google-preview-mode-mobile"
      >
        Mobile result
      </label>
      <input
        checked=""
        class="c3"
        id="yoast-google-preview-mode-desktop"
        name="screen"
        type="radio"
        value="desktop"
      />
      <label
        class="c4"
        for="yoast-google-preview-mode-desktop"
      >
        Desktop result
      </label>
    </fieldset>
    <section
      class="yoast-snippet-preview-section"
    >
      <div
        class="c5 yoast-snippet-preview-container__wrapper"
      >
        <div
          class="c6 c5 yoast-snippet-preview-container"
          id="yoast-snippet-preview-container"
        >
          <div
            class="c7"
          >
            <div
              class="SnippetPreview__DesktopPartContainer-sc-1hxg8jo-20"
            >
              <span
                class="screen-reader-text"
                style="clip: rect(1px, 1px, 1px, 1px); position: absolute; height: 1px; width: 1px; overflow: hidden;"
              >
                Url preview:
              </span>
              <div
                class="c8"
              >
                <div
                  class="c8 c9"
                >
                  <div
                    class="c10"
                  >
                    <img
                      alt=""
                      class="c11"
                      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAABs0lEQVR4AWL4//8/RRjO8Iucx+noO0MWUDo16FYABMGP6ZfUcRnWtm27jVPbtm3bttuH2t3eFPcY9pLz7NxiLjCyVd87pKnHyqXyxtCs8APd0rnyxiu4qSeA3QEDrAwBDrT1s1Rc/OrjLZwqVmOSu6+Lamcpp2KKMA9PH1BYXMe1mUP5qotvXTywsOEEYHXxrY+3cqk6TMkYpNr2FeoY3KIr0RPtn9wQ2unlA+GMkRw6+9TFw4YTwDUzx/JVvARj9KaedXRO8P5B1Du2S32smzqUrcKGEyA+uAgQjKX7zf0boWHGfn71jIKj2689gxp7OAGShNcBUmLMPVjZuiKcA2vuWHHDCQxMCz629kXAIU4ApY15QwggAFbfOP9DhgBJ+nWVJ1AZAfICAj1pAlY6hCADZnveQf7bQIwzVONGJonhLIlS9gr5mFg44Xd+4S3XHoGNPdJl1INIwKyEgHckEhgTe1bGiFY9GSFBYUwLh1IkiJUbY407E7syBSFxKTszEoiE/YdrgCEayDmtaJwCI9uu8TKMuZSVfSa4BpGgzvomBR/INhLGzrqDotp01ZR8pn/1L0JN9d9XNyx0AAAAAElFTkSuQmCC"
                    />
                  </div>
                  <span
                    class="c12"
                  >
                    <div
                      class="c13"
                    >
                      Test site name
                    </div>
                    <span
                      class="c14"
                    >
                      example.org
                    </span>
                    <span
                      class="c15"
                    >
                       › test-slug
                    </span>
                    <span
                      class="c16"
                    >
                      <svg
                        fill="#4d5156"
                        style="width: 18px;"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
              <span
                class="screen-reader-text"
                style="clip: rect(1px, 1px, 1px, 1px); position: absolute; height: 1px; width: 1px; overflow: hidden;"
              >
                SEO title preview:
              </span>
              <div
                class="c17"
              >
                <div
                  class="c18 c19"
                >
                  <span
                    class="c20"
                  >
                    Test title
                  </span>
                </div>
              </div>
            </div>
            <div
              class="SnippetPreview__DesktopPartContainer-sc-1hxg8jo-20"
            >
              <span
                class="screen-reader-text"
                style="clip: rect(1px, 1px, 1px, 1px); position: absolute; height: 1px; width: 1px; overflow: hidden;"
              >
                Meta description preview:
              </span>
              <div
                class="c21"
              >
                Test description, %%replacement_variable%%
              </div>
            </div>
          </div>
        </div>
      </div>
    </section>
    <button
      aria-expanded="false"
      class="c22 c23 c24 c25 c26 c27 c28"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c29 yoast-svg-icon yoast-svg-icon-edit"
        fill="currentColor"
        focusable="false"
        role="img"
        viewBox="0 0 1792 1792"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M491 1536l91-91-235-235-91 91v107h128v128h107zm523-928q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zm-54-192l416 416-832 832h-416v-416zm683 96q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"
        />
      </svg>
      Edit snippet
    </button>
  </div>
</div>
`;

exports[`SnippetEditor Mobile mode 1`] = `
.c27 {
  width: 16px;
  height: 16px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c20 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c21:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c22::-moz-focus-inner {
  border-width: 0;
}

.c22:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c23:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c24 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5 {
  border-bottom: 1px hidden #fff;
  border-radius: 8px;
  box-shadow: 0 1px 6px rgba(32,33,36,0.28);
  font-family: Arial,Roboto-Regular,HelveticaNeue,sans-serif;
  max-width: 400px;
  box-sizing: border-box;
  font-size: 14px;
}

.c15 {
  cursor: pointer;
  position: relative;
}

.c16 {
  color: #1558d6;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 20px;
  line-height: 26px;
  font-weight: normal;
  margin: 0;
  display: inline-block;
  overflow: hidden;
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c17 {
  max-width: 600px;
  vertical-align: top;
  text-overflow: ellipsis;
}

.c14 {
  display: inline-block;
  max-width: 100px;
  overflow: hidden;
  vertical-align: top;
  text-overflow: ellipsis;
  margin-left: 4px;
}

.c18 {
  display: inline-block;
  max-height: 52px;
  padding-top: 1px;
  vertical-align: top;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c7 {
  display: inline-block;
  cursor: pointer;
  position: relative;
  width: calc( 100% + 7px );
  white-space: nowrap;
  font-size: 14px;
  line-height: 16px;
  vertical-align: top;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  text-overflow: ellipsis;
  max-width: 100%;
  margin-bottom: 12px;
  padding-top: 1px;
  line-height: 20px;
  vertical-align: bottom;
}

.c11 {
  font-size: 12px;
  line-height: 20px;
  color: #3c4043;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c13 {
  color: #70757a;
}

.c9 {
  width: 28px;
  height: 28px;
  margin-right: 12px;
  border-radius: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: #f1f3f4;
  min-width: 28px;
}

.c19 {
  color: #3c4043;
  font-size: 14px;
  cursor: pointer;
  position: relative;
  line-height: 1.4;
  max-width: 600px;
}

.c19:after {
  display: table;
  content: "";
  clear: both;
}

.c6 {
  padding: 12px 16px;
}

.c6:first-child {
  margin-bottom: -16px;
}

.c12 {
  line-height: 18x;
  font-size: 14px;
  color: black;
  max-width: 300px;
  overflow: hidden;
}

.c10 {
  width: 18px;
  height: 18px;
  margin: 0 5px;
  vertical-align: middle;
}

.c1 {
  border: 0;
  padding: 0;
  margin: 0 0 16px;
}

.c2 {
  margin: 8px 0;
  padding: 0;
  color: #555;
  font-size: 14px;
  font-weight: 600;
}

.c4 {
  margin-right: 16px;
  color: inherit;
  font-size: 14px;
  line-height: 1.71428571;
  cursor: pointer;
  display: inline-block;
}

.c3.c3 {
  margin: 0 8px 0 0;
  cursor: pointer;
}

.c0 {
  margin: 0 0 16px;
  padding: 0;
  color: #555;
  font-size: 12px;
  font-weight: 300;
}

.c25 {
  height: 33px;
  border: 1px solid #dbdbdb;
  box-shadow: none;
  font-family: Arial,Roboto-Regular,HelveticaNeue,sans-serif;
}

.c26 {
  margin: 10px 0 0 4px;
  fill: #555;
  padding-left: 8px;
}

.c26 svg {
  margin-right: 7px;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c24::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div>
  <div>
    <legend
      class="c0"
    >
      Determine how your post should look in the search results.
    </legend>
    <fieldset
      class="c1"
    >
      <legend
        class="c2"
      >
        Preview as:
      </legend>
      <input
        checked=""
        class="c3"
        id="yoast-google-preview-mode-mobile"
        name="screen"
        type="radio"
        value="mobile"
      />
      <label
        class="c4"
        for="yoast-google-preview-mode-mobile"
      >
        Mobile result
      </label>
      <input
        class="c3"
        id="yoast-google-preview-mode-desktop"
        name="screen"
        type="radio"
        value="desktop"
      />
      <label
        class="c4"
        for="yoast-google-preview-mode-desktop"
      >
        Desktop result
      </label>
    </fieldset>
    <section
      class="yoast-snippet-preview-section"
    >
      <div
        class="c5 yoast-snippet-preview-container"
        id="yoast-snippet-preview-container"
      >
        <div
          class="c6"
        >
          <span
            class="screen-reader-text"
            style="clip: rect(1px, 1px, 1px, 1px); position: absolute; height: 1px; width: 1px; overflow: hidden;"
          >
            Url preview:
          </span>
          <div
            class="c7"
          >
            <div
              class="c7 c8"
            >
              <div
                class="c9"
              >
                <img
                  alt=""
                  class="c10"
                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAABs0lEQVR4AWL4//8/RRjO8Iucx+noO0MWUDo16FYABMGP6ZfUcRnWtm27jVPbtm3bttuH2t3eFPcY9pLz7NxiLjCyVd87pKnHyqXyxtCs8APd0rnyxiu4qSeA3QEDrAwBDrT1s1Rc/OrjLZwqVmOSu6+Lamcpp2KKMA9PH1BYXMe1mUP5qotvXTywsOEEYHXxrY+3cqk6TMkYpNr2FeoY3KIr0RPtn9wQ2unlA+GMkRw6+9TFw4YTwDUzx/JVvARj9KaedXRO8P5B1Du2S32smzqUrcKGEyA+uAgQjKX7zf0boWHGfn71jIKj2689gxp7OAGShNcBUmLMPVjZuiKcA2vuWHHDCQxMCz629kXAIU4ApY15QwggAFbfOP9DhgBJ+nWVJ1AZAfICAj1pAlY6hCADZnveQf7bQIwzVONGJonhLIlS9gr5mFg44Xd+4S3XHoGNPdJl1INIwKyEgHckEhgTe1bGiFY9GSFBYUwLh1IkiJUbY407E7syBSFxKTszEoiE/YdrgCEayDmtaJwCI9uu8TKMuZSVfSa4BpGgzvomBR/INhLGzrqDotp01ZR8pn/1L0JN9d9XNyx0AAAAAElFTkSuQmCC"
                />
              </div>
              <span
                class="c11"
              >
                <div
                  class="c12"
                >
                  Test site name
                </div>
                <span
                  class="c13"
                >
                  example.org
                </span>
                <span
                  class="c14"
                >
                   › test-slug
                </span>
              </span>
              <svg
                fill="#70757a"
                style="width: 18px;"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </div>
          </div>
          <span
            class="screen-reader-text"
            style="clip: rect(1px, 1px, 1px, 1px); position: absolute; height: 1px; width: 1px; overflow: hidden;"
          >
            SEO title preview:
          </span>
          <div
            class="c15"
          >
            <div
              class="c16 c17"
            >
              <span
                class="c18"
              >
                Test title
              </span>
            </div>
          </div>
        </div>
        <div
          class="c6"
        >
          <span
            class="screen-reader-text"
            style="clip: rect(1px, 1px, 1px, 1px); position: absolute; height: 1px; width: 1px; overflow: hidden;"
          >
            Meta description preview:
          </span>
          <div
            class="c19"
          >
            <div
              class="c19"
            >
              Test description, %%replacement_variable%%
            </div>
          </div>
        </div>
      </div>
    </section>
    <button
      aria-expanded="false"
      class="c20 c21 c22 c23 c24 c25 c26"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c27 yoast-svg-icon yoast-svg-icon-edit"
        fill="currentColor"
        focusable="false"
        role="img"
        viewBox="0 0 1792 1792"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M491 1536l91-91-235-235-91 91v107h128v128h107zm523-928q0-22-22-22-10 0-17 7l-542 542q-7 7-7 17 0 22 22 22 10 0 17-7l542-542q7-7 7-17zm-54-192l416 416-832 832h-416v-416zm683 96q0 53-37 90l-166 166-416-416 166-165q36-38 90-38 53 0 91 38l235 234q37 39 37 91z"
        />
      </svg>
      Edit snippet
    </button>
  </div>
</div>
`;
